--- a/fiverr/javascript/sql-restaraunt/package.json
+++ b/fiverr/javascript/sql-restaraunt/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
-    "mysql": "^2.18.1"
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "express-paginate": "^1.0.2",
+    "mysql": "^2.18.1",
+    "node": "^19.2.0"
   }
 }
